# florence-mcp-servers

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  DOCKER.md  LICENSE  Makefile  README.md  claude_desktop_config.example.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pytest.ini  requirements.txt
servers/recipe_api_server/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
servers/recipe_api_server/src/: __init__.py  main.py
servers/recipe_api_server/src/services/: __init__.py  spoonacular.py
servers/recipe_api_server/src/tools/: __init__.py  get_recipe_details.py  search_recipes.py
servers/recipe_api_server/tests/: __init__.py
servers/recipe_api_server/tests/test_services/: __init__.py  test_spoonacular.py
servers/recipe_api_server/tests/test_tools/: __init__.py  test_search_recipes.py
shared/: __init__.py
shared/types/: __init__.py  recipe.py
shared/utils/: logger.py
tests/: __init__.py
tests/test_shared/: __init__.py  test_recipe_models.py
